refactor: streamline service and repository methods