@@ -15,13 +15,11 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class GradeService {
-
     private final GradeRepository gradeRepository;
     private final StudentRepository studentRepository;
     private final SubjectRepository subjectRepository;
@@ -30,14 +28,14 @@ public class GradeService {
         return gradeRepository.findAllWithDetails()
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<GradeResponse> findByStudent(Integer studentId) {
-        return gradeRepository.findAllByStudentId(studentId)
-                .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+        if (!studentRepository.existsById(studentId)) {
+            throw new ResourceNotFoundException("Student not found with id: " + studentId);
+        }
+        return gradeRepository.findAllByStudentId(studentId).stream().map(this::toResponse).toList();
     }
 
     public GradeResponse findById(Integer studentId, Integer subjectId) {
@@ -46,27 +44,15 @@ public class GradeService {
 
     @Transactional
     public GradeResponse create(GradeRequest request) {
-        Student student = studentRepository.findById(request.studentId())
-                .orElseThrow(() -> new ResourceNotFoundException("Student not found with id: " + request.studentId()));
-
-        Subject subject = subjectRepository.findById(request.subjectId())
-                .orElseThrow(() -> new ResourceNotFoundException("Subject not found with id: " + request.subjectId()));
-
+        Student student = studentRepository.findById(request.studentId()).orElseThrow(() -> new ResourceNotFoundException("Student not found with id: " + request.studentId()));
+        Subject subject = subjectRepository.findById(request.subjectId()).orElseThrow(() -> new ResourceNotFoundException("Subject not found with id: " + request.subjectId()));
         GradeId id = new GradeId(student.getStudentId(), subject.getSubjectId());
-
         if (gradeRepository.existsById(id)) {
-            throw new GradeAlreadyExistsException(
-                    "Grade already exists for student " + request.studentId() + " and subject " + request.subjectId() +
-                            ". Use PUT to update.");
+            throw new GradeAlreadyExistsException("Grade already exists for student " + request.studentId() + " and subject " + request.subjectId() + ". Use PUT to update."
+            );
         }
 
-        Grade grade = Grade.builder()
-                .id(id)
-                .student(student)
-                .subject(subject)
-                .value(request.value())
-                .build();
-
+        Grade grade = Grade.builder().id(id).student(student).subject(subject).value(request.value()).build();
         return toResponse(gradeRepository.save(grade));
     }
 
@@ -79,16 +65,12 @@ public class GradeService {
 
     @Transactional
     public void delete(Integer studentId, Integer subjectId) {
-        Grade grade = getOrThrow(studentId, subjectId);
-        gradeRepository.delete(grade);
+        gradeRepository.delete(getOrThrow(studentId, subjectId));
+    }
+    private Grade getOrThrow(Integer studentId, Integer subjectId) {
+        return gradeRepository.findByStudentIdAndSubjectId(studentId, subjectId).orElseThrow(() -> new ResourceNotFoundException("Grade not found for student " + studentId + " and subject " + subjectId));
     }
 
-    private Grade getOrThrow(Integer studentId, Integer subjectId) {
-        GradeId id = new GradeId(studentId, subjectId);
-        return gradeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Grade not found for student " + studentId + " and subject " + subjectId));
-    }
 
     private GradeResponse toResponse(Grade grade) {
         return new GradeResponse(
